--- a/Diagnosis.App/Windows/SettingsWindow.xaml
+++ b/Diagnosis.App/Windows/SettingsWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window x:Class="Diagnosis.App.Windows.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:controls="clr-namespace:Diagnosis.App.Controls"
         xmlns:diag="http://schemas.smg.com/diagnosis"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
         Title="Настройки"
@@ -27,11 +26,11 @@
             </CheckBox>
             
             <Label Content="Обозначения пола" />
-            <controls:RadioListBox ItemsSource="{Binding Sexes}"
+            <diag:RadioListBox ItemsSource="{Binding Sexes}"
                                    Focusable="False"
                                    SelectedItem="{Binding SelectedSex}"
                                    MultiSelection="False">
-            </controls:RadioListBox>
+            </diag:RadioListBox>
         </StackPanel>
 
         <StackPanel Grid.Row="1"
