--- a/Diagnosis.Common/Controls/Common/TextBoxInfo.xaml
+++ b/Diagnosis.Common/Controls/Common/TextBoxInfo.xaml
@@ -1,6 +1,5 @@
-﻿<TextBox x:Class="Diagnosis.App.Controls.TextBoxInfo"
+﻿<TextBox x:Class="Diagnosis.Common.Controls.TextBoxInfo"
          xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-         xmlns:controls="clr-namespace:Diagnosis.App.Controls"
          xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
          xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
          xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
