--- a/Diagnosis.Common/Controls/Common/UndoOverlay.xaml
+++ b/Diagnosis.Common/Controls/Common/UndoOverlay.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.UndoOverlay"
+﻿<UserControl x:Class="Diagnosis.Common.Controls.UndoOverlay"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
