--- a/Diagnosis.Common/Styles/TreeStyle.xaml
+++ b/Diagnosis.Common/Styles/TreeStyle.xaml
@@ -1,7 +1,7 @@
-﻿<ResourceDictionary x:Class="Diagnosis.App.Styles.TreeStyle"
+﻿<ResourceDictionary x:Class="Diagnosis.Common.Styles.TreeStyle"
                     x:ClassModifier="public"
                     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:conv="clr-namespace:Diagnosis.App.Converters"
+                    xmlns:conv="clr-namespace:Diagnosis.Common.Converters"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <conv:TreeDepthToMargin Length="19"
                             x:Key="lengthConverter" />
