--- a/Diagnosis.App/Screens/Words.xaml
+++ b/Diagnosis.App/Screens/Words.xaml
@@ -49,7 +49,7 @@
             </Button>
         </ToolBar>
 
-        <search:Filter DataContext="{Binding Filter}"
+        <diag:Filter DataContext="{Binding Filter}"
                        Grid.Row="1" />
 
         <!-- Set VirtualizationMode for IsSelected binding -->
