--- a/Diagnosis.Common/Controls/Filter.xaml
+++ b/Diagnosis.Common/Controls/Filter.xaml
@@ -1,9 +1,10 @@
-﻿<UserControl x:Class="Diagnosis.App.Controls.Search.Filter"
+﻿<UserControl x:Class="Diagnosis.Common.Controls.Search.Filter"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
+             xmlns:beh="clr-namespace:Diagnosis.Common.Behaviors"
+             xmlns:controls="clr-namespace:Diagnosis.Common.Controls"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
              d:DesignHeight="30"
@@ -17,17 +18,17 @@
 
         <TextBox x:Name="input"
                  GotKeyboardFocus="input_GotKeyboardFocus"
-                 diag:FocusExtension.IsFocused="{Binding IsFocused, Mode=TwoWay}"
+                 beh:FocusExtension.IsFocused="{Binding IsFocused, Mode=TwoWay}"
                  Text="{Binding Query, UpdateSourceTrigger=PropertyChanged}">
-            <diag:WatermarkService.Watermark>
-                <TextBlock Style="{StaticResource watermark}"
+            <controls:WatermarkService.Watermark>
+                <TextBlock Style="{DynamicResource watermark}"
                            Text="{Binding WatermarkText, RelativeSource={RelativeSource Self}}" />
-            </diag:WatermarkService.Watermark>
+            </controls:WatermarkService.Watermark>
         </TextBox>
         <Button Grid.Column="1"
                 Content="×"
                 Height="{Binding ActualHeight, ElementName=input}"
-                Style="{StaticResource squareButton}"
+                Style="{DynamicResource squareButton}"
                 Command="{Binding ClearCommand}" />
     </Grid>
 </UserControl>
