--- a/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
+++ b/Diagnosis.App/Windows/Editors/MeasureEditorWindow.xaml
@@ -66,7 +66,17 @@
                           SelectedItem="{Binding Uom, ValidatesOnDataErrors=True}"
                           IsEditable="True"
                           ItemsSource="{Binding Uoms}"
-                          Grid.Column="2" />
+                          Grid.Column="2">
+                    <ComboBox.GroupStyle>
+                        <GroupStyle>
+                            <GroupStyle.HeaderTemplate>
+                                <DataTemplate>
+                                    <TextBlock Text="{Binding Name}" />
+                                </DataTemplate>
+                            </GroupStyle.HeaderTemplate>
+                        </GroupStyle>
+                    </ComboBox.GroupStyle>
+                </ComboBox>
             </Grid>
         </Grid>
 
