--- a/Diagnosis.ServerApp/App.xaml
+++ b/Diagnosis.ServerApp/App.xaml
@@ -1,14 +1,21 @@
 ﻿<Application x:Class="Diagnosis.ServerApp.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:properties="clr-namespace:Diagnosis.ServerApp.Properties"
+             xmlns:s="clr-namespace:System;assembly=mscorlib"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/ConverterResources.xaml" />
+
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.Common;component/Styles/BeforeThemeStyles.xaml" />
+
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.Common;component/Styles/AfterThemeStyles.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/Diagnosis.Common;component/Styles/TreeStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-
+            <s:Boolean x:Key="True">True</s:Boolean>
+            <s:Boolean x:Key="False">False</s:Boolean>
             <properties:Settings x:Key="Settings" />
         </ResourceDictionary>
     </Application.Resources>
