--- a/Diagnosis.Common/Controls/PopupSearch.xaml
+++ b/Diagnosis.Common/Controls/PopupSearch.xaml
@@ -6,6 +6,7 @@
              x:Class="Diagnosis.Common.Controls.Search.PopupSearch"
              xmlns:beh="clr-namespace:Diagnosis.Common.Behaviors"
              xmlns:controls="clr-namespace:Diagnosis.Common.Controls"
+             xmlns:search="clr-namespace:Diagnosis.Common.Controls.Search"
              mc:Ignorable="d"
              d:DesignHeight="100"
              d:DesignWidth="300"
@@ -18,26 +19,12 @@
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-                <ColumnDefinition Width="auto" />
-            </Grid.ColumnDefinitions>
-            <TextBox x:Name="input"
-                     Text="{Binding Filter.Query, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                     PreviewKeyDown="input_PreviewKeyDown"
-                     GotMouseCapture="input_GotMouseCapture"
-                     beh:FocusExtension.IsFocused="{Binding IsFocused, Mode=TwoWay}"
-                     LostFocus="input_LostFocus">
-                <controls:WatermarkService.Watermark>
-                    <TextBlock Style="{DynamicResource watermark}">Поиск</TextBlock>
-                </controls:WatermarkService.Watermark>
-            </TextBox>
-            <Button Grid.Column="1"
-                    Content="×"
-                    Style="{DynamicResource squareButton}"
-                    Command="{Binding Filter.ClearCommand}" />
-        </Grid>
+        
+        <search:Filter DataContext="{Binding Filter}"
+                       PreviewInputKeyDown="input_PreviewKeyDown"
+                       GotMouseCapture="input_GotMouseCapture"
+                       LostFocus="input_LostFocus" />
+        
         <Popup x:Name="popup"
                IsOpen="{Binding IsResultsVisible, Mode=TwoWay}"
                PlacementTarget="{Binding ElementName=input, Mode=OneWay}">
