--- a/Diagnosis.App/Screens/Card.xaml
+++ b/Diagnosis.App/Screens/Card.xaml
@@ -12,14 +12,11 @@
              x:Name="card"
              mc:Ignorable="d"
              UseLayoutRounding="True"
-             d:DataContext="{DynamicResource Context}"
-             d:DesignHeight="300"
+             d:DataContext="{d:DesignInstance diag:CardViewModel, IsDesignTimeCreatable=False}"
+             d:DesignHeight="400"
              d:DesignWidth="600">
-    <!-- CardViewModel -->
     <UserControl.Resources>
-        <ResourceDictionary>
-            <diag:CardViewModel x:Key="Context" />
-        </ResourceDictionary>
+      
     </UserControl.Resources>
 
     <UserControl.InputBindings>
@@ -98,6 +95,7 @@
                      Grid.Column="1"
                      Margin="0,0,0,10" />
         <card:HealthRecordsList DataContext="{Binding HrList}"
+                                d:DataContext="{x:Null}"
                                 Grid.Column="1"
                                 Grid.Row="1" />
 
