--- a/Diagnosis.App/Windows/IcdSelectorWindow.xaml
+++ b/Diagnosis.App/Windows/IcdSelectorWindow.xaml
@@ -10,11 +10,10 @@
         Height="400"
         Width="500"
         mc:Ignorable="d"
-        d:DataContext="{DynamicResource Context}"
+        d:DataContext="{d:DesignInstance diag:SampleIcdSelectorViewModel, IsDesignTimeCreatable=True}"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
         diag:FocusBehavior.FocusFirst="True">
     <Window.Resources>
-        <diag:IcdSelectorViewModel x:Key="Context" />
     </Window.Resources>
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
