--- a/Diagnosis.ServerApp/Screens/Uoms.xaml
+++ b/Diagnosis.ServerApp/Screens/Uoms.xaml
@@ -5,14 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:diag="http://schemas.smg.com/diagnosis"
              mc:Ignorable="d"
-             d:DataContext="{DynamicResource Context}"
+             d:DataContext="{d:DesignInstance diag:UomsListViewModel, IsDesignTimeCreatable=False}"
              d:DesignHeight="300"
              d:DesignWidth="300">
-    <!--  UomListViewModel  -->
     <UserControl.Resources>
-        <ResourceDictionary>
-            <diag:UomsListViewModel x:Key="Context" />
-        </ResourceDictionary>
+        
     </UserControl.Resources>
     <UserControl.InputBindings>
         <KeyBinding Modifiers="Control"
