--- a/Diagnosis.ServerApp/Windows/UomEditorWindow.xaml
+++ b/Diagnosis.ServerApp/Windows/UomEditorWindow.xaml
@@ -12,12 +12,10 @@
         UseLayoutRounding="True"
         x:Name="uomEditor"
         diag:DialogCloser.DialogResult="{Binding DialogResult}"
-        d:DataContext="{DynamicResource Context}"
+        d:DataContext="{d:DesignInstance diag:UomEditorViewModel, IsDesignTimeCreatable=True}"
         mc:Ignorable="d">
     <Window.Resources>
-        <ResourceDictionary>
-            <diag:UomEditorViewModel x:Key="Context" />
-        </ResourceDictionary>
+        
     </Window.Resources>
     <Grid Margin="0,0,10,10">
         <Grid.RowDefinitions>
