ui. Font size in autocomplete and holder
--HG--
branch : f/MahApps

--- a/Diagnosis.App/Controls/Headers/Holder.xaml
+++ b/Diagnosis.App/Controls/Headers/Holder.xaml
@@ -29,5 +29,6 @@
         </controls:HrsHolderDataTemplateSelector>
     </UserControl.Resources>
     <ContentPresenter Content="{Binding}"
+                      TextBlock.FontSize="{DynamicResource ContentFontSize}"
                       ContentTemplateSelector="{StaticResource selector}" />
 </UserControl>
